--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<table>
+<ul>
+
+  <li>
+    123
+  </li>
+</ul>
+</table>
 </body>
 </html>
